--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,13 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -26,4 +33,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.ibm.watson.developer_cloud:java-sdk:6.11.3'
+
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.spotify.android:auth:1.1.0'
+
 }
